--- a/css/style.css
+++ b/css/style.css
@@ -131,7 +131,7 @@ a {
 }
 
 .navbar {
-    position: fixed;
+    position: absolute;
     z-index: 100;
     width: 100%;
     background-color: #6c63ff;
@@ -219,8 +219,9 @@ a {
     background-position: center center;
     background-size: cover;
     background-repeat: no-repeat;
-    box-shadow: 0 4px 11px rgba(124, 146, 169, .5);
     color: #fff;
+    box-shadow: 0 1px 3px rgba(0, 0, 0, .12),
+    0 1px 2px rgba(0, 0, 0, .24);
 }
 .hero__inner {
     position: relative;
@@ -232,12 +233,12 @@ a {
     z-index: 1;
     width: 100%;
     height: 100%;
-    background-color: #6c63ff;
+    background-color: #feb692;
     opacity: .96;
 }
 
 .hero__overlay--gradient {
-    background: linear-gradient(to right, #6c63ff, #4641ff);
+    background: linear-gradient(#feb692, #fa7268);
 }
 
 .hero__mask {
@@ -274,13 +275,14 @@ a {
 }
 
 .hero__text {
-    text-align: left;
-    font-size: 1.1em;
+    text-align: center;
+    font-size: 1.5em;
     line-height: 1.7;
     opacity: .85;
 }
 
 .hero .button {
+    font-size: 1.5em;
     margin: 12pt 8pt;
 }
 
@@ -424,13 +426,13 @@ a {
 
 .cta {
     padding: 48pt 0;
-    background: linear-gradient(to right, #6c63ff, #4641ff);
+    background: linear-gradient(#feb692, #fa7268);
     color: #fff;
     text-align: center;
 }
 
 .cta--reverse {
-    background: linear-gradient(to left, #6c63ff, #4641ff);
+    background: linear-gradient(to left, #feb692, #fa7268);
 }
 
 .cta__title {
